adding value class for new collection field and updating test