@@ -1,9 +1,9 @@
 package uk.gov.hmcts.reform.sscs.ccd.presubmit.ftacommunication;
 
-import static org.hamcrest.MatcherAssert.assertThat;
-import static org.hamcrest.Matchers.is;
-import static org.hamcrest.Matchers.notNullValue;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.Mockito.when;
 import static org.mockito.MockitoAnnotations.openMocks;
 import static uk.gov.hmcts.reform.sscs.ccd.callback.CallbackType.ABOUT_TO_SUBMIT;
@@ -12,23 +12,22 @@ import static uk.gov.hmcts.reform.sscs.ccd.domain.EventType.APPEAL_RECEIVED;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.List;
-import junitparams.JUnitParamsRunner;
-import junitparams.Parameters;
-import org.junit.Before;
-import org.junit.Test;
-import org.junit.runner.RunWith;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.MethodSource;
 import org.mockito.Mock;
 import uk.gov.hmcts.reform.sscs.ccd.callback.Callback;
 import uk.gov.hmcts.reform.sscs.ccd.callback.PreSubmitCallbackResponse;
 import uk.gov.hmcts.reform.sscs.ccd.domain.CaseDetails;
 import uk.gov.hmcts.reform.sscs.ccd.domain.EventType;
 import uk.gov.hmcts.reform.sscs.ccd.domain.FtaCommunication;
+import uk.gov.hmcts.reform.sscs.ccd.domain.FtaCommunicationDetails;
 import uk.gov.hmcts.reform.sscs.ccd.domain.FtaCommunicationFields;
 import uk.gov.hmcts.reform.sscs.ccd.domain.SscsCaseData;
 import uk.gov.hmcts.reform.sscs.idam.IdamService;
 import uk.gov.hmcts.reform.sscs.idam.UserDetails;
 
-@RunWith(JUnitParamsRunner.class)
 public class FtaCommunicationAboutToSubmitHandlerTest {
 
     private static final String USER_AUTHORISATION = "Bearer token";
@@ -46,7 +45,7 @@ public class FtaCommunicationAboutToSubmitHandlerTest {
     private IdamService idamService;
 
 
-    @Before
+    @BeforeEach
     public void setUp() {
         openMocks(this);
 
@@ -64,10 +63,10 @@ public class FtaCommunicationAboutToSubmitHandlerTest {
         assertTrue(handler.canHandle(ABOUT_TO_SUBMIT, callback));
     }
 
-    @Test(expected = IllegalStateException.class)
+    @Test
     public void throwsExceptionIfItCannotHandleTheAppeal() {
         when(callback.getEvent()).thenReturn(APPEAL_RECEIVED);
-        handler.handle(ABOUT_TO_SUBMIT, callback, USER_AUTHORISATION);
+        assertThrows(IllegalStateException.class, () -> handler.handle(ABOUT_TO_SUBMIT, callback, USER_AUTHORISATION));
     }
        
     @Test
@@ -100,13 +99,72 @@ public class FtaCommunicationAboutToSubmitHandlerTest {
         // Verify a new FTA communication was added
         List<FtaCommunication> resultComs = response.getData().getFtaCommunicationFields().getFtaCommunications();
     
-        assertThat(resultComs.size(), is(1));
-    
-        FtaCommunication addedCom = resultComs.get(0);
-        assertThat(addedCom.getRequestTopic(), is(expectedTopic));
-        assertThat(addedCom.getRequestText(), is(expectedQuestion));
-        assertThat(addedCom.getRequestUserName(), is(expectedUserName));
-        assertThat(addedCom.getRequestDateTime(), is(notNullValue()));
+        assertEquals(1, resultComs.size());
+
+        FtaCommunicationDetails addedCom = resultComs.getFirst().getValue();
+        assertEquals(expectedTopic, addedCom.getRequestTopic());
+        assertEquals(expectedQuestion, addedCom.getRequestText());
+        assertEquals(expectedUserName, addedCom.getRequestUserName());
+        assertNotNull(addedCom.getRequestDateTime());
+    }
+
+    @Test
+    public void givenValidFtaRequest_shouldAddNewCommunicationToPopulatedList() {
+        // Setup FTA communication fields
+        String expectedTopic = "Test Topic";
+        String expectedQuestion = "Test Question";
+        String expectedUserName = "Test User";
+
+        // Create list of existing communications
+        FtaCommunication ftaCommunicationPast = FtaCommunication.builder().value(
+            FtaCommunicationDetails.builder()
+                .requestTopic("Past existing Topic")
+                .requestText("Past existing Question")
+                .requestDateTime(LocalDateTime.now().minusYears(2))
+                .requestUserName("Past existing user")
+                .requestDueDate(LocalDateTime.now().minusYears(1))
+                .build()
+        ).build();
+        FtaCommunication ftaCommunicationFuture = FtaCommunication.builder().value(
+            FtaCommunicationDetails.builder()
+                .requestTopic("Future existing Topic")
+                .requestText("Future existing Question")
+                .requestDateTime(LocalDateTime.now().plusYears(1))
+                .requestUserName("Future existing user")
+                .requestDueDate(LocalDateTime.now().plusYears(2))
+                .build()
+        ).build();
+        List<FtaCommunication> existingComs = new ArrayList<>(List.of(ftaCommunicationFuture, ftaCommunicationPast));
+        FtaCommunicationFields fields = FtaCommunicationFields.builder()
+            .ftaRequestTopic(expectedTopic)
+            .ftaRequestQuestion(expectedQuestion)
+            .ftaCommunications(existingComs)
+            .build();
+
+        sscsCaseData.setFtaCommunicationFields(fields);
+
+        // Mock user details
+        UserDetails userDetails = UserDetails.builder()
+            .name(expectedUserName)
+            .build();
+        when(idamService.getUserDetails(USER_AUTHORISATION)).thenReturn(userDetails);
+
+        // Execute the function
+        PreSubmitCallbackResponse<SscsCaseData> response =
+            handler.handle(ABOUT_TO_SUBMIT, callback, USER_AUTHORISATION);
+
+        // Verify a new FTA communication was added
+        List<FtaCommunication> resultComs = response.getData().getFtaCommunicationFields().getFtaCommunications();
+
+        assertEquals(3, resultComs.size());
+
+        assertEquals(ftaCommunicationFuture, resultComs.getFirst());
+        FtaCommunicationDetails addedCom = resultComs.get(1).getValue();
+        assertEquals(expectedTopic, addedCom.getRequestTopic());
+        assertEquals(expectedQuestion, addedCom.getRequestText());
+        assertEquals(expectedUserName, addedCom.getRequestUserName());
+        assertNotNull(addedCom.getRequestDateTime());
+        assertEquals(ftaCommunicationPast, resultComs.getLast());
     }
     
     @Test
@@ -137,19 +195,19 @@ public class FtaCommunicationAboutToSubmitHandlerTest {
         // Verify a new FTA communication was added
         List<FtaCommunication> resultComs = response.getData().getFtaCommunicationFields().getFtaCommunications();
     
-        assertThat(resultComs, is(notNullValue()));
+        assertNotNull(resultComs);
     }
 
-    @Test
-    @Parameters(method = "dueDateParameters")
+    @ParameterizedTest
+    @MethodSource(value = {"dueDateParameters"})
     public void calculateDueDate_shouldAdjustForWeekends(LocalDateTime inputDate, LocalDateTime expectedDueDate) {
         LocalDateTime actualDueDate = handler.calculateDueDate(inputDate);
         
-        assertThat(actualDueDate, is(expectedDueDate));
+        assertEquals(expectedDueDate, actualDueDate);
     }
 
     @SuppressWarnings("unused")
-    private Object[] dueDateParameters() {
+    private static Object[] dueDateParameters() {
         return new Object[] {
             // Normal weekday -> Weekday (2 days later)
             new Object[] {
